# drmario64_recomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aspMain.us.toml  drmario64.us.toml  launch.vs.json  patches.toml
assets/: config_menu.rml  config_sub_menu.rml  launcher.rml  recomp.rcss
assets/config_menu/: mods.rml
assets/scss/: package-lock.json
drmario64syms/: drmario64.us.datasyms.toml  drmario64.us.syms.toml
include/: overloaded.h  recomp.h  recomp_config.h  recomp_data.h  recomp_input.h  recomp_ui.h  zelda_config.h  zelda_game.h  zelda_render.h  zelda_support.h
lib/SlotMap/: README.md  slot_map.h
patches/: Makefile  dummy.c  misc_funcs.h  patch_helpers.h  patches.h  patches.ld  print.c  recompui_event_structs.h  syms.ld  ui_funcs.h
recompiled/: CMakeLists.txt  aspMain.us.toml  drmario64.us.toml
rsp/: .gitignore
src/game/: config.cpp  controls.cpp  debug.cpp  input.cpp  recomp_actor_api.cpp  recomp_api.cpp  recomp_data_api.cpp  rom_decompression.cpp
src/main/: main.cpp  register_overlays.cpp  register_patches.cpp  rt64_render_context.cpp  support.cpp  support_apple.mm
src/recomp/: math_routines.cpp  overlays.cpp  patch_loading.cpp  pi.cpp  recomp.cpp
src/ui/: ui_api.cpp  ui_api_events.cpp  ui_api_images.cpp  ui_api_images.h  ui_color_hack.cpp  ui_config.cpp  ui_config_sub_menu.cpp  ui_config_sub_menu.h  ui_elements.cpp  ui_elements.h  ui_helpers.h  ui_launcher.cpp  ui_mod_details_panel.cpp  ui_mod_details_panel.h  ui_mod_installer.cpp  ui_mod_installer.h  ui_mod_menu.cpp  ui_mod_menu.h  ui_prompt.cpp  ui_renderer.cpp  ui_renderer.h  ui_state.cpp  ui_utils.cpp  ui_utils.h
src/ui/core/: ui_context.cpp  ui_context.h  ui_resource.h
src/ui/elements/: ui_button.cpp  ui_button.h  ui_clickable.cpp  ui_clickable.h  ui_container.cpp  ui_container.h  ui_element.cpp  ui_element.h  ui_image.cpp  ui_image.h  ui_label.cpp  ui_label.h  ui_radio.cpp  ui_radio.h  ui_scroll_container.cpp  ui_scroll_container.h  (+11 more)
ultramodern/: events.cpp  rt64_layer.cpp  scheduling.cpp
(+3 files in other folders)
